--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -41,6 +41,93 @@
                 </div>
             </div>
         </nav>
+        <!--  -->
+        <div id="carouselExampleControls" class=" container carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+
+                    <div class=" d-flex align-items-center row bg-info p-5">
+                        <div class="col-lg-7">
+                            <h1>Cool Dude Headphone
+                            </h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front
+                                of funky world.
+
+                            </p>
+                            <h2 class="text-danger">$498</h2>
+                            <span class="bg-warning py-2 px-4 rounded mt-3">buy Now</span>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+
+                        </div>
+                    </div>
+
+
+                </div>
+
+
+
+
+
+                <div class="carousel-item">
+
+                    <div class=" d-flex align-items-center row bg-info p-5">
+                        <div class="col-lg-7">
+                            <h1>Mi LED TV 4A PRO 32
+
+                            </h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front
+                                of funky world.
+
+                            </p>
+                            <h2 class="text-danger">$498</h2>
+                            <span class="bg-warning py-2 px-4 rounded mt-3">buy Now</span>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="carousel-item ">
+
+                    <div class=" d-flex align-items-center row bg-info p-5">
+                        <div class="col-lg-7">
+                            <h1>X-Box for your living room
+
+                            </h1>
+                            <p>This is the best x-box in the world for people who just want to waste time in front of
+                                fake sports.
+
+
+                            </p>
+                            <h2 class="text-danger">$498</h2>
+                            <span class="bg-warning py-2 px-4 rounded mt-3">buy Now</span>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
 
     </header>
 
