--- a/index.html
+++ b/index.html
@@ -138,6 +138,158 @@
 
     <main>
 
+
+        <div class="container my-5">
+            <h2>Categories
+            </h2>
+            <div class="row g-4">
+
+                <div class="col-lg-4">
+                    <div class=" bg-warning d-flex d-flex align-items-center p-4 justify-content-between rounded">
+                        <h5 class="card-title text-white">Watch</h5>
+                        <img src="images/categories/watch.png" class="w-25" alt="...">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4">
+                    <div class=" bg-info d-flex d-flex align-items-center p-4 justify-content-between rounded">
+                        <h5 class="card-title text-white">Watch</h5>
+                        <img src="images/categories/bag.png" class="w-25" alt="...">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4">
+                    <div class=" bg-warning d-flex d-flex align-items-center p-4 justify-content-between rounded">
+                        <h5 class="card-title text-white">Watch</h5>
+                        <img src="images/categories/shoes.png" class="w-25" alt="...">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <!---------------------->
+        <!-- product  -->
+        <!--------------------->
+
+
+        <section class="container bg-light pb-3">
+            <h2>Shoes</h2>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Dart Men’s Shoes
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok Pump</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+
+                        <div class="m-3">
+                            <button class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Reebok All Terrain</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+        <!--  -->
+        <!-- backpak -->
+        <!--  -->
+        <section class="container bg-light pb-3">
+            <h2 class="pt-5 pb-3">Backpak</h2>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card border-0 rounded h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ison Backpac
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 rounded h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Biaowang Backpack</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+
+                        <div class="m-3">
+                            <button class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card border-0 rounded h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
+
+
+
     </main>
     <footer>
 
