--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <section class="container bg-light pb-3">
             <h2>Shoes</h2>
 
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -235,7 +235,7 @@
         <section class="container bg-light pb-3">
             <h2 class="pt-5 pb-3">Backpak</h2>
 
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card border-0 rounded h-100">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
@@ -285,13 +285,29 @@
             </div>
 
         </section>
+        <!--------------------->
+        <!-- login section  -->
+        <!---------------------->
+        <section class="container bg-info rounded-3 p-3 my-5 d-flex align-items-center justify-content-center">
 
+            <div>
+                <h2>LET'S STAY IN TOUCH
+                </h2>
+                <p>Get updates on sales specials and more
+                </p>
+                <input type="email" placeholder="Enter Email">
+                <br>
+                <button class="btn btn-primary py-1 px-3 mt-4">Send</button>
+            </div>
+
+        </section>
 
 
 
 
     </main>
-    <footer>
+    <footer class="text-center">
+        <p><small>copyright &copy; This is Awsome foote creat By Asaduzzaman</small></p>
 
     </footer>
 
